Avoid page Y scrollbar

--- a/public/css/passweaver.css
+++ b/public/css/passweaver.css
@@ -33,6 +33,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: var(--theme-font-size) !important;
+  overflow-y: hidden;
 }
 
 /** CSS Grid */
